# group-two-project

./: .gitignore  CMakeLists.txt  README.md  generate_data.py
include/: Analyzer.h  BinaryUtils.h  DuplicatesAnalyzer.h  MissingAnalyzer.h  SearchAnalyzer.h  StatisticsAnalyzer.h  search.h  sorting.h
src/: Analyzer.cpp  BinaryUtils.cpp  CSC252_Sorting.cpp  DuplicatesAnalyzer.cpp  MissingAnalyzer.cpp  SearchAnalyzer.cpp  StatisticsAnalyzer.cpp  main.cpp  search.cpp
tests/: test_analyzer.cpp  test_binaryutils.cpp  test_missing_dupl_analyzers.cpp  test_search.cpp  test_search_analyzer.cpp  test_sorting.cpp  test_statistics.cpp
